third_party/move/move-compiler-v2/tests/bytecode-generator/wildcard1.exp

Diagnostics:
error: the left-hand side has 2 items but the right-hand side provided 1
  ┌─ tests/bytecode-generator/wildcard1.move:7:13
  │
7 │         let _ = tup();
  │             ^
